Fix menu pixel shift on hover

--- a/sites/all/themes/atwork_zen/sass/layouts/_mainnav.scss
+++ b/sites/all/themes/atwork_zen/sass/layouts/_mainnav.scss
@@ -240,7 +240,7 @@
   &:hover {
     background: url('../images/arrows.png') no-repeat;
     top:15px;
-    right:5px;
+    right:0px;
   }
 }
 .not-front #navigation {
